--- a/ITS_demo/templates/fracompare.html
+++ b/ITS_demo/templates/fracompare.html
@@ -386,7 +386,7 @@ for (i = 0; i < close.length; i++) {
   <div class="progress"  ><div class="running" data-progress="100%"> </div></div>
         <div class="task running">
             <h2></h2>
-            <i class="fas fa-pennant" id="icon4" style="color:white;margin:auto;margin-left:10px;margin-top:10px;"></i></div>
+            <i class="fas fa-pennant" id="icon4" style="color:white;display:flex;justify-content:center;align-items:center;margin-bottom:30px;"></i></div>
     </div>
 </div>
 
