--- a/ITS_demo/templates/normal-form.html
+++ b/ITS_demo/templates/normal-form.html
@@ -190,7 +190,6 @@ function check_den2()
 }
 function right1(){
     document.getElementsByClassName("fbox")[0].style.display="block";
-    
     document.getElementsByClassName("fbox")[1].style.display="inline";
     document.getElementsByClassName("fbox")[2].style.display="block";
     document.getElementsByClassName("fbox")[3].style.display="inline";
@@ -306,7 +305,7 @@ for (i = 0; i < close.length; i++) {
 
     <div class="btn-group btn-group-vertical" id="btn-grp1" role="group" aria-label="Basic example" style="float:right; margin-right:120px;visibility:hidden;">
           <button type="button" class="btn btn-primary" style="margin-bottom:30px;" id="btn1">HCF</button>
-          <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" id="btn2">Average</button>
+          <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" id="btn2">NF</button>
           <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" onclick="right1();" id="btn3">LCM</button>
         <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" id="btn4">Multiply</button>
 </div>
